# hangman

./: CMakeLists.txt
builds/: hangman-linux
src/: Game.cpp  Game.h  main.cpp
words/: dictionary.txt  wordcleanser.py
